# lmethods

./: .gitignore  .prettierrc  LICENSE  README.md  pyproject.toml
lmethods/: __init__.py  method.py
lmethods/protocols/: __init__.py  dataset.py  logger.py  model.py  usage.py
lmethods/reasoning/: __init__.py  meta_prompting.py  recursive_prompting.py  tree_of_thoughts.py
lmethods/utils/: __init__.py  decomposition.py  graphs.py  logging.py  prompting.py  self_consistency.py  threading.py  usage.py
prompts/chat-models/reasoning/meta_prompting/: cot_step_by_step.md
prompts/reasoning/meta_prompting/: cot_few_shot.md  cot_zero_shot.md
